metadata/force-app/main/default/objects/CustomName_HktXu__c/CustomName_HktXu__c.object-meta.xml
<CustomObject>
    <description>Description_PVhJA</description>
    <label>CustomLabel_BHBmX</label>
    <nameField>
        <label>CustomLabel_BHBmX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BHBmXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>