metadata/force-app/main/default/objects/CustomName_HktXu__c/fields/CustomField_OvXCi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OvXCi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRNFPk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>